[package]
name = "input-linux"
version = "0.5.0"
authors = ["arcnmx"]
edition = "2018"

description = "evdev and uinput"
keywords = ["evdev", "uinput", "linux", "input"]

documentation = "http://docs.rs/input-linux/*/input_linux"
repository = "https://github.com/arcnmx/input-linux-rs"
readme = "README.md"
license = "MIT"

include = [
	"src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
input-linux-sys = "^0.7.0"
nix = "^0.22.0"
tokio-util = { version = "^0.6.0", default-features = false, features = ["codec"], optional = true }
bytes = { version = "^1.0.0", optional = true }
serde = { version = "^1.0.27", features = ["derive"], optional = true }

[features]
with-tokio = ["tokio-util", "bytes"]
with-serde = ["serde"]
unstable = []
