[package]
name = "input-linux"
version = "0.5.0"
authors = ["arcnmx"]
edition = "2018"

description = "evdev and uinput"
keywords = ["evdev", "uinput", "linux", "input"]

documentation = "http://docs.rs/input-linux/*/input_linux"
repository = "https://github.com/arcnmx/input-linux-rs"
readme = "README.md"
license = "MIT"

include = [
	"src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
features = ["tokio-util", "serde"]

[dependencies]
input-linux-sys = "0.7"
nix = "0.22"
tokio-util = { version = "0.6", default-features = false, features = ["codec"], optional = true }
bytes = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
tokio-util = ["dep:tokio-util", "bytes"]
serde = ["dep:serde"]
unstable = []
