[package]
name = "input-linux"
version = "0.7.0"
authors = ["arcnmx"]
edition = "2018"

description = "evdev and uinput"
keywords = ["evdev", "uinput", "linux", "input"]

documentation = "http://docs.rs/input-linux/*/input_linux"
repository = "https://github.com/arcnmx/input-linux-rs"
readme = "README.md"
license = "MIT"

include = [
	"src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
features = ["dox", "tokio-util-0_6", "tokio-util-0_7", "serde"]

[dependencies]
input-linux-sys = { git = "https://github.com/WhatAmISupposedToPutHere/input-linux-sys-rs" }
nix = "0.26"
tokio-util-0_7 = { package = "tokio-util", version = "0.7", default-features = false, features = ["codec"], optional = true }
tokio-util-0_6 = { package = "tokio-util", version = "0.6", default-features = false, features = ["codec"], optional = true }
bytes = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
tokio-util-0_6 = ["dep:tokio-util-0_6", "codec", "bytes"]
tokio-util-0_7 = ["dep:tokio-util-0_7", "codec", "bytes"]
codec = ["bytes"]
serde = ["dep:serde"]
unstable = []
dox = []
